Checkpoint: Fix marquee text overlapping in Gallery

--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -35,7 +35,7 @@
 
 .gallery-slider .gallery-box {
     position: relative;
-    min-width: calc(110rem * 5);
+    min-width: calc(250rem * 6);
     height: 15rem;
     display: flex;
     gap: 2rem;
@@ -43,7 +43,7 @@
 
 .gallery-slider .gallery-box h3 {
     font-size: 10rem;
-    width: 110rem;
+    width: 250rem;
     white-space: nowrap;
     position: absolute;
     color: #f4efe7;
@@ -55,7 +55,7 @@
 
 @keyframes gallery-animate {
     to {
-        left: -110rem;
+        left: -250rem;
     }
 }
 
